--- a/index.html
+++ b/index.html
@@ -207,38 +207,39 @@
       <a name="faq"></a>
       <h3>Frequently asked questions</h3>
       <p><b>Q: Why am I limited?</b>
-      <br><b>A: </b>Limits are here for many reasosn. I want every command (shipgirl, touhou, etc.) to always include an image. These image sites also have their own limits, as well as Twitter.
-
+      <br><b>A: </b>Limits are here for many reasons. I want every command (shipgirl, touhou, etc.) to always include an image. These image sites have their own limits, along side Twitter's API.
+      <br>
       <br><b>Q: What are the current limits?</b>
       <br><b>A: </b>Currently these are the limits:-
-      <br>WaifuRegister: 5 Times x 100 Hours
-      <br>MyWaifu: 8 Times x 3 Hours
+      <br>WaifuRegister: 5 Times x 300 Hours
+      <br>MyWaifu: 5 Times x 3 Hours
       <br>Airing: 5 Times x 10 Hours
       <br>Every Other Command: 10 Times x 2 Hours
       <br>You are also limited on using: 5 Commands x 2 Minutes
-
+      <br>
       <br><b>Q: Why is MyWaifu limited less on WaifuWednesday?</b>
-      <br><b>A: </b>The limit is lowered to 2 Times x 1 Hour while the "WaifuWednesday" job is running. The job runs at 10am (GMT) and runs for about 4 hours. This is to limit the chances of errors for everyone. Once the job is finished it will go back to the orginal limits.
+      <br><b>A: </b>The limit is lowered to 2 Times x 1 Hour while the "WaifuWednesday" job is running. The job runs at 8am (GMT) and runs for about 4+ hours. This is to limit the chances of errors for everyone. Once the job is finished it will go back to the orginal limits.
       <a name="waifulimit"></a>
+      <br>
       <br><b>Q: Why is WaifuRegister time limit so high?</b>
       <br><b>A: </b>I originally had this idea for people to get images of their waifu quickly. People are sluts and don't stick with one waifu and so they change it every time the limit is over and get any image they want. <b>PLEASE GO TO GOOGLE.COM FOR THAT!</b> If you messed up on registering then you should look at the examples more. I'm usally fair; if I see that my bot didn't help much I will personally remove the limit and help you.
-
+      <br>
       <br><b>Q: I was blocked?!</b>
-      <br><b>A: </b>I personally don't block. The bot will block users who unfollow and refollow to use WaifuRegister. The bot will tweet at you a warning if you DID unfollow. You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list. You will also get blocked for not following the "DO NOT REGISTER" list.
-
+      <br><b>A: </b>You don't get blocked. The bot will simply ignore your commands.
+      <br>The bot will ignore users who unfollow and refollow to use WaifuRegister. The bot will first tweet you a warning if you DID unfollow. You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list. You will also get ignored for not following the "DO NOT REGISTER" list.
+      <br>
       <br><b>Q: Can I not get #WaifuWednesday, but keep my waifu?</b>
       <br><b>A: </b>Yes! Use WaifuSubscribe / HusbandoSubscribe. It will tell you if you have unsubscribed or resubscribed.
-
+      <br>
       <br><b>Q: Can I use another Twitter account for another waifu?</b>
       <br><b>A: </b>I'd prefer if you didn't. I can't stop you. But if I see 100s of accounts that link to you then I will take action.
-
+      <br>
       <br><b>Q: How can I help you out?</b>
       <br><b>A: </b>The bot is open for anyone on github. I'm bad at programming so feel free to fix my mistakes.
-
+      <br>
       <br><b>Q: How do I request a feature?</b>
       <br><b>A: </b>Feel free to tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
-
-
+      <br>
       <br><b>Q: I have a problem not listed here!</b>
       <br><b>A: </b>Feel free to tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
 
