--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p><a href="http://twitter.com/AcePictureBot">AcePictureBot</a>  - The main bot, a SFW image every 15 minutes;
       <br><b>ONLY USE THIS ACCOUNT TO USE COMMANDS!</b>
       <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
-      <br><a href="http://twitter.com/AceYuriBot">AceYuriBot</a> - Posts a SFW Yuri image every 15 minutes.</p>
+      <br><a href="http://twitter.com/AceYuriBot">AceYuriBot</a> - Posts a SFW Yuri image every 15 minutes.
       <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.</p>
 
       <a name="commands"></a>
