--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
       <br>Automaticaly recive an image every #WaifuWednesday or manually by using MyWaifu/MyHusbando.
       <br>Before using this command please read these things:
       <br><b>1. </b>You MUST follow the bot to register!
-      <br><b>2. </b>User their full name (If you're not sure check MyAnimeList)!
+      <br><b>2. </b>Use their full name (If you're not sure check MyAnimeList)!
       <br><b>3. </b>Don't include any special characters!
       <br>(ū > uu | ç > c | è > e)
-      <br><b>4. </b>Sometimes single names will have to have their show name in brackets "( )" (See examples first)!
+      <br><b>4. </b>Sometimes single names will have to have their show name in brackets "( )" (See "more examples" first)!
       <br><b>5. </b>If the name is single and you're not too sure, the bot will automaticaly help you when registering!
-      <br><b>6. </b>You are limited at using the register command - 5 times per 100 hours <a href="#waifulimit">(Click here to see why)</a>!
+      <br><b>6. </b>You are limited at using the register command - 5 times per 300 hours <a href="#waifulimit">(Click here to see why)</a>!
       <br><b>7. </b>Seasonal waifus are a bad idea as not much art is out there!
-      <br><b>DO NOT REGISTER: </b>a real person, anime name, tags (1girl, 1boy, etc.), or a pony.
+      <br><b>DO NOT REGISTER: </b>a real person, anime name, your twitter handle, tags (1girl, 1boy, etc.), or a pony.
 
 
       <h4>Examples</h4>
@@ -223,6 +223,9 @@
       <br>
       <br><b>Q: Why is WaifuRegister time limit so high?</b>
       <br><b>A: </b>I originally had this idea for people to get images of their waifu quickly. People are sluts and don't stick with one waifu and so they change it every time the limit is over and get any image they want. <b>PLEASE GO TO GOOGLE.COM FOR THAT!</b> If you messed up on registering then you should look at the examples more. I'm usally fair; if I see that my bot didn't help much I will personally remove the limit and help you.
+      <br>
+      <br><b>Q: Why do I have to register to use MyWaifu?</b>
+      <br><b>A: </b> How is the bot suppose to know your waifu? Using "MyWaifu" is NOT the same as "Waifu".
       <br>
       <br><b>Q: I was blocked?!</b>
       <br><b>A: </b>You don't get blocked. The bot will simply ignore your commands.
