--- a/index.html
+++ b/index.html
@@ -227,9 +227,13 @@
       <br><b>Q: Why do I have to register to use MyWaifu?</b>
       <br><b>A: </b> How is the bot suppose to know your waifu? Using "MyWaifu" is NOT the same as "Waifu".
       <br>
+      <a name="waifuimages"></a>
+      <br><b>Q: "Not enough images were found!"?</b>
+      <br><b>A: </b> People use MyWaifu a lot. No more than 10 images were found on 2+ sites. It is pointless to keep a person that doesn't have images for a image based command. Try again after some seasons or just get a better waifu.
+      <br>
       <br><b>Q: I was blocked?!</b>
       <br><b>A: </b>You don't get blocked. The bot will simply ignore your commands.
-      <br>The bot will ignore users who unfollow and refollow to use WaifuRegister. The bot will first tweet you a warning if you DID unfollow. You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list. You will also get ignored for not following the "DO NOT REGISTER" list.
+      <br>The bot will ignore users who unfollow and refollow to use WaifuRegister. The bot will first tweet you a warning if you DID unfollow (and still have a waifu/husbando). You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list. You will also get ignored for not following the "DO NOT REGISTER" list.
       <br>
       <br><b>Q: Can I not get #WaifuWednesday, but keep my waifu?</b>
       <br><b>A: </b>Yes! Use WaifuSubscribe / HusbandoSubscribe. It will tell you if you have unsubscribed or resubscribed.
