--- a/index.html
+++ b/index.html
@@ -35,10 +35,16 @@
       <a name="accounts"></a>
       <h3>Accounts</h3>
       <p><a href="http://twitter.com/AcePictureBot">AcePictureBot</a>  - The main bot, a SFW image every 15 minutes;
-      <br><b>ONLY USE THIS ACCOUNT TO USE COMMANDS!</b>
-      <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
+      <br>This account will retweet some (SFW) images from AceYuriBot and AceEcchiBot.
+      <br><b>ONLY USE ACEPICTUREBOT TO USE COMMANDS!</b>
       <br><a href="http://twitter.com/AceYuriBot">AceYuriBot</a> - Posts a SFW Yuri image every 15 minutes.
-      <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.</p>
+      <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.
+      <br><a href="http://twitter.com/AceEcchiBot">AceEcchiBot</a> - Posts a SFW/NSFW image every 15 minutes.
+      <br>This account is "light hentai". No sex, etc. 
+      <br><a href="https://twitter.com/AceEcchiBot/status/599279798343573505/photo/1">Example post.</a>
+      <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
+      <br>This account is "heavy hentai". Could have sex, etc.
+      <br><a href="https://twitter.com/AceNSFWBot/status/599222403244363776/photo/1">Example post.</a></p>
 
       <a name="commands"></a>
       <h3>Commands</h3>
@@ -227,13 +233,12 @@
       <br><b>Q: Why do I have to register to use MyWaifu?</b>
       <br><b>A: </b> How is the bot suppose to know your waifu? Using "MyWaifu" is NOT the same as "Waifu".
       <br>
-      <a name="waifuimages"></a>
       <br><b>Q: "Not enough images were found!"?</b>
       <br><b>A: </b> People use MyWaifu a lot. No more than 10 images were found on 2+ sites. It is pointless to keep a person that doesn't have images for a image based command. Try again after some seasons or just get a better waifu.
       <br>
       <br><b>Q: I was blocked?!</b>
       <br><b>A: </b>You don't get blocked. The bot will simply ignore your commands.
-      <br>The bot will ignore users who unfollow and refollow to use WaifuRegister. The bot will first tweet you a warning if you DID unfollow (and still have a waifu/husbando). You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list. You will also get ignored for not following the "DO NOT REGISTER" list.
+      <br>The bot will ignore users who unfollow and refollow to use WaifuRegister. You can use WaifuRemove / HusbandoRemove to remove your name from the MyWaifu list. You will also get ignored for not following the "DO NOT REGISTER" list.
       <br>
       <br><b>Q: Can I not get #WaifuWednesday, but keep my waifu?</b>
       <br><b>A: </b>Yes! Use WaifuSubscribe / HusbandoSubscribe. It will tell you if you have unsubscribed or resubscribed.
