--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <br><b>ONLY USE ACEPICTUREBOT TO USE COMMANDS!</b>
       <br><a href="http://twitter.com/AceYuriBot">AceYuriBot</a> - Posts a SFW Yuri image every 15 minutes.
       <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.
-      <br><a href="http://twitter.com/AceEcchiBot">AceEcchiBot</a> - Posts a SFW/NSFW image every 15 minutes.
-      <br>This account is "light hentai". No sex, etc. 
+      <br><a href="http://twitter.com/AceEcchiBot">AceEcchiBot</a> - Posts a SFW/NSFW image every 30 minutes.
+      <br>This account is "light hentai". No sex, masturbation, could contain a vag, etc. 
       <br><a href="https://twitter.com/AceEcchiBot/status/599279798343573505/photo/1">Example post.</a>
       <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
-      <br>This account is "heavy hentai". Could have sex, etc.
+      <br>This account is "heavy hentai". Could have sex, masturbation, will contain a vag, etc.
       <br><a href="https://twitter.com/AceNSFWBot/status/599222403244363776/photo/1">Example post.</a></p>
 
       <a name="commands"></a>
