--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
       <a name="accounts"></a>
       <h3>Accounts</h3>
       <p><a href="http://twitter.com/AcePictureBot">AcePictureBot</a>  - The main bot, a SFW image every 15 minutes;
-      <br>This account will retweet some (SFW) images from AceYuriBot and AceEcchiBot.
+      <br>This account will retweet some (SFW (2D)) images from the other bots.
       <br><b>ONLY USE ACEPICTUREBOT TO USE COMMANDS!</b>
       <br><a href="http://twitter.com/AceYuriBot">AceYuriBot</a> - Posts a SFW Yuri image every 15 minutes.
       <br><a href="http://twitter.com/AceYaoiBot">AceYaoiBot</a> - Posts a SFW Yaoi image every 15 minutes.
       <br><a href="http://twitter.com/AceEcchiBot">AceEcchiBot</a> - Posts a SFW/NSFW image every 30 minutes.
       <br>This account is "light hentai". No sex, masturbation, could contain a vag, etc. 
-      <br><a href="https://twitter.com/AceEcchiBot/status/599279798343573505/photo/1">Example post.</a>
       <br><a href="http://twitter.com/AceNSFWBot">AceNSFWBot</a> - Posts a NSFW image every 15 minutes.
-      <br>This account is "heavy hentai". Could have sex, masturbation, will contain a vag, etc.
-      <br><a href="https://twitter.com/AceNSFWBot/status/599222403244363776/photo/1">Example post.</a></p>
+      <br>This account is "heavy hentai". Could have sex, masturbation, will probably contain a vag, etc.
+      <br><a href="http://twitter.com/AceAsianBot">AceAsianBot</a> - Posts a SFW 3DPD image every hour.</p>
 
       <a name="commands"></a>
       <h3>Commands</h3>
@@ -233,8 +232,9 @@
       <br><b>Q: Why do I have to register to use MyWaifu?</b>
       <br><b>A: </b> How is the bot suppose to know your waifu? Using "MyWaifu" is NOT the same as "Waifu".
       <br>
+      <a name="waifuimages"></a>
       <br><b>Q: "Not enough images were found!"?</b>
-      <br><b>A: </b> People use MyWaifu a lot. No more than 10 images were found on 2+ sites. It is pointless to keep a person that doesn't have images for a image based command. Try again after some seasons or just get a better waifu.
+      <br><b>A: </b>People use MyWaifu a lot. No more than 10 images were found on 2+ sites. It is pointless to keep a person that doesn't have images for a image based command. Try again after some seasons or just get a better waifu.
       <br>
       <br><b>Q: I was blocked?!</b>
       <br><b>A: </b>You don't get blocked. The bot will simply ignore your commands.
@@ -245,6 +245,9 @@
       <br>
       <br><b>Q: Can I use another Twitter account for another waifu?</b>
       <br><b>A: </b>I'd prefer if you didn't. I can't stop you. But if I see 100s of accounts that link to you then I will take action.
+      <br>
+      <br><b>Q: Why "Ace [blank] Bot"?</b>
+      <br><b>A: </b>I couldn't think of any other name.
       <br>
       <br><b>Q: How can I help you out?</b>
       <br><b>A: </b>The bot is open for anyone on github. I'm bad at programming so feel free to fix my mistakes.
