--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
           <li><a href="#waifuregister">WaifuRegister [args] / HusbandoRegister [args]</a></li>
           <li><a href="#mywaifu">MyWaifu / MyHusbando</a></li>
           <li><a href="#waifu">Waifu / Husbando (args)</a></li>
-          <li><a href="#otp">OTP / Yuri OTP / Yaoi OTP (args)</a></li>
           <li><a href="#shipgirl">Shipgirl (args)</a></li>
+          <li><a href="#otp">OTP / Yuri OTP / Yaoi OTP (args)</a></li>
           <li><a href="#touhou">Touhou (args)</a></li>
           <li><a href="#vocaloid">Vocaloid (args)</a></li>       
           <li><a href="#idol">Idol (args)</a></li>
           <li><a href="#sensei">Sensei (args)</a></li>
           <li><a href="#tankgirl">Tankgirl</a></li>
+          <li><a href="#witchgirl">Witchgirl</a></li>
           <li><a href="#imouto">Imouto</a></li>
           <li><a href="#onii">Onii-chan</a></li>
           <li><a href="#onee">Onee-chan</a></li>
@@ -112,6 +113,20 @@
       <button type="button" class="btn btn-info">Click here for more examples!</button>
       </a>
       </center>
+
+      <a name="shipgirl"></a>
+      <h3>Shipgirl</h3>
+      <p>Get a random kancolle girl!
+      <br><b>Optional:</b> Add OTP to the tweet and get your kancolle OTP
+      <br>You can also add "aoki" to get a shipgirl from "Aoki Hagane no Arpeggio" 
+      <br>or add "all" to get a shipgirl from either Kancolle or Aoki Hagane!
+      <br>You're also able to add "otp all" to get a Kancolle x Aoki OTP!</p>
+      <h4>Examples</h4>
+      <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/MangaLightMe">@MangaLightMe</a> Your Shipgirl is Mutsu <a href="https://twitter.com/hashtag/kancolle?src=hash">#kancolle</a> <a href="http://t.co/PyCa928RI5">pic.twitter.com/PyCa928RI5</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596794677178855425">May 8, 2015</a></blockquote>
+      <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your Shipgirl OTP is Ise x Hyuuga <a href="https://twitter.com/hashtag/kancolle?src=hash">#kancolle</a> <a href="http://t.co/bCoqVQ8nhi">pic.twitter.com/bCoqVQ8nhi</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596794858083393538">May 8, 2015</a></blockquote>
+      <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your Shipgirl is Haruna <a href="http://t.co/sdCzw1DwDd">pic.twitter.com/sdCzw1DwDd</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/600801519198429184">May 19, 2015</a></blockquote>
+      <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="ht" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your Shipgirl OTP is Kongou x Kongou <a href="http://t.co/iJTzMKGeoP">pic.twitter.com/iJTzMKGeoP</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/600801691768782848">May 19, 2015</a></blockquote>
+
       <a name="otp"></a>
       <h3>OTP / Yuri OTP / Yaoi OTP</h3>
       <p>Get a random OTP, Yuri OTP or Yaoi OTP!
@@ -129,14 +144,6 @@
       </a>
       </center>
 
-      <a name="shipgirl"></a>
-      <h3>Shipgirl</h3>
-      <p>Get a random kancolle girl!
-      <br><b>Optional:</b> Add OTP to the tweet and get your kancolle OTP</p>
-      <h4>Examples</h4>
-      <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/MangaLightMe">@MangaLightMe</a> Your Shipgirl is Mutsu <a href="https://twitter.com/hashtag/kancolle?src=hash">#kancolle</a> <a href="http://t.co/PyCa928RI5">pic.twitter.com/PyCa928RI5</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596794677178855425">May 8, 2015</a></blockquote>
-      <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your Shipgirl OTP is Ise x Hyuuga <a href="https://twitter.com/hashtag/kancolle?src=hash">#kancolle</a> <a href="http://t.co/bCoqVQ8nhi">pic.twitter.com/bCoqVQ8nhi</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596794858083393538">May 8, 2015</a></blockquote>
-     
       <a name="touhou"></a>
       <h3>Touhou</h3>
       <p>Get a random touhou!
@@ -172,9 +179,15 @@
 
       <a name="tankgirl"></a>
       <h3>Tankgirl</h3>
-      <p>Get a random panzer girl!
+      <p>Get a random Panzer girl!
       <h4>Examples</h4>
       <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="en" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your Tankgirl is Isobe Noriko <a href="http://t.co/2tdMTuS01U">pic.twitter.com/2tdMTuS01U</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/596795344127660032">May 8, 2015</a></blockquote>
+
+      <a name="witchgirl"></a>
+      <h3>Witchgirl</h3>
+      <p>Get a random Strike Witches girl!
+      <h4>Examples</h4>
+      <blockquote class="twitter-tweet" data-cards="hidden" data-partner="tweetdeck"><p lang="et" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your Witchgirl is Eila Ilmatar Juutilainen <a href="http://t.co/v13Ant79gX">pic.twitter.com/v13Ant79gX</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/600802539815182337">May 19, 2015</a></blockquote>
 
       <a name="imouto"></a>
       <h3>Imouto</h3>
