--- a/index.html
+++ b/index.html
@@ -264,6 +264,9 @@
       <br><b>Q: How can I help you out?</b>
       <br><b>A: </b>The bot is open for anyone on github. I'm bad at programming so feel free to fix my mistakes.
       <br>
+      <br><b>Q: Where do you get the birthday infomation from?</b>
+      <br><b>A: </b><a href="https://docs.google.com/spreadsheets/d/15ZGvdwR8MnPtFQS8Ys9ZrcP5HCkuGswUdyQMBqwRm6Y/">Here</a>
+      <br>
       <br><b>Q: How do I request a feature?</b>
       <br><b>A: </b>Feel free to tweet <a href="https://twitter.com/Ace3DF/">@Ace3DF</a>
       <br>
