--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       <h3>Waifu / Husbando</h3>
       <p>Find out who your random waifu or husbando is!
       <br><b>Optional:</b> Add a show name to recive a random waifu/husbando from that show!
+      <br>(Note searching for a show name takes ALL your tweet into account so be care what you tweet with it.)
       <br><a href="#showlist">(Click here for full show list)</a></p>
       <h4>Examples</h4>
       <blockquote class="twitter-tweet" data-cards="hidden" lang="en"><p><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Your waifu is Hiiragi from Hanamaru Youchien <a href="http://t.co/2nBmQ5txa5">pic.twitter.com/2nBmQ5txa5</a></p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/584707835981864960">April 5, 2015</a></blockquote>
