--- a/Examples/airing.html
+++ b/Examples/airing.html
@@ -16,7 +16,9 @@
    <p>Be careful with the anime name!</p>
    <p>All times are taken from <a href="https://www.livechart.me/summer-2015/all">here!</a></p>
    <p>This is just a quick way to share when something is airing.</p>
+<blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Mujaki no Rakuen&#10;Movie airing in&#10;60 Days, 19 Hours and 13 Minutes</p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/614882506064723968">June 27, 2015</a></blockquote>
+<blockquote class="twitter-tweet" lang="en"><p lang="lt" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Gate: Jieitai Kanochi nite, Kaku Tatakeri&#10;Episode 1&#10;5 Days, 19 Hours and 51 Minutes</p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/614880444815921152">June 27, 2015</a></blockquote>
     <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/Ace3DF">@Ace3DF</a> Fate/kaleid liner Prisma Illya 2wei! Herz!&#10;Episode 1 airing in&#10;26 Days, 20 Hours and 37 Minutes</p>&mdash; Pic Bot (@AcePictureBot) <a href="https://twitter.com/AcePictureBot/status/614886560731930624">June 27, 2015</a></blockquote>
-    </section>   
+  </section>   
    </body>
    </html>
