--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
       <a name="showlist"></a>
       <h3>Show List</h3>
       <p>Use CTRL + F to find the one you want. Try looking for the Japanese, English and short (novel) name.</p>
+      <p>This does <b>NOT</b> reflect who you can and can't use for MyWaifu / MyHusbando. So don't look at this list for that.</p>
       <iframe src="https://cdn.rawgit.com/ace3df/AcePictureBot/master/temp/show_list.txt" width="100%" height="400" align="center">
       </iframe>
     </section>
