Final update to site

--- a/commands.html
+++ b/commands.html
@@ -38,12 +38,11 @@ TODO: automaticaly get this from github code and comments
       <br><strong>6. </strong>Seasonal waifus are a bad idea as not much art is out there!
       <br><strong>7. </strong>If the name is only single (i.e. C.C.) add "$" on the end (read 4.)!
       <br>
-      <br><b>DO NOT REGISTER: </b>a real person, anime name,
+      <br><strong class="blink">DO NOT REGISTER: </strong>a real person, anime name,
       <br>your twitter handle, tags (1girl, 1boy, etc.), or a pony.
       </td>
       <td class="mdl-data-table__cell--non-numeric">
       <strong>"WaifuRegister Tojo Nozomi"</strong>
-      <br><strong>"WaifuRegister Tojo Nozomi"</strong>
       <br><strong>"WaifuRegister Akame (Akame Ga Kill!)"</strong>
       <br><strong>"WaifuRegister Kongou (Kantai Collection)"</strong>
       <br><strong>"WaifuRegister C.C. $"</strong>
@@ -113,10 +112,11 @@ You're also able to add "otp all" to get a Kancolle x Aoki OTP!</td>
       </td>
       <td class="mdl-data-table__cell--non-numeric">
       Get a random OTP, Yuri OTP or Yaoi OTP!<br> 
-<strong>Optional:</strong> Add a show name to recive an OTP from that show!<br>
-Please note that image quality of the character images will improve over time.<br>
-You can also do two shows together: 
-<br>Bleach (x) Naruto (Note the (x) compared to the normal Bleach x Naruto) </td>
+      <strong>Optional:</strong> Add a show name to recive an OTP from that show!<br>
+      Please note that image quality of the character images will improve over time.<br>
+      You can also do two shows together: 
+      <br>Bleach (x) Naruto (Note the (x) compared to the normal Bleach x Naruto)
+      </td>
       <td class="mdl-data-table__cell--non-numeric">
       <strong>"OTP"</strong>
       <br><strong>"Yuri OTP"</strong>
@@ -124,6 +124,174 @@ You can also do two shows together:
       <br><strong>"OTP Naruto (x) Bleach"</strong>
       <br><strong>"Yuri OTP K-On!"</strong>
       <br><strong>"Yaoi OTP Bleach"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Touhou</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random Touhou girl!<br> 
+      <strong>Optional:</strong> Add "OTP" on the end for a Touhou OTP!</td>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Touhou"</strong>
+      <br><strong>"Touhou OTP"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Sensei</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random Sensei!<br> 
+      <strong>Optional:</strong> Add "male" or "female" for just that gender!</td>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Sensei"</strong>
+      <br><strong>"Sensei Male"</strong>
+      <br><strong>"Sensei Female"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Vocaloid</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random Vocaloid!<br> 
+      <strong>Optional:</strong> Add "OTP" on the end for a Vocaloid OTP!</td>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Vocaloid"</strong>
+      <br><strong>"Vocaloid OTP"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Imouto</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random Imouto!<br> 
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Imouto"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Shota</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random little boy!<br> 
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Shota"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Idol</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random Idol!<br> 
+      <strong>Optional:</strong> Add a one of these series names to get a idol from that spersific series: 
+      <br>Love Live, Idolmaster, Idolmaster Cinderalla Girls, AKB0048, Wake up Girls, Aikatsu
+      <br>or for a male idol add "male" on the end!
+      <br><strong>Optional 2:</strong> You can also add "OTP" on the end for these shows only: 
+      <br>Love Live (only for now)</td>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Idol"</strong>
+      <br><strong>"Idol Love Live"</strong>
+      <br><strong>"Idol Idolmaster"</strong>
+      <br><strong>"Idol Cinderalla"</strong>
+      <br><strong>"Idol Male"</strong>
+      <br><strong>"Idol Love Live OTP"</strong>
+      <br/>
+      </td>
+    </tr>   
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Onii-chan</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random onii-chan!<br> 
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Onii-chan"</strong>
+      <br><strong>"Onii-san"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Onee-chan</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random onee-chan!<br> 
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Onee-chan"</strong>
+      <br><strong>"Onee-sama"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Tankgirl</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random Tankgirl!<br> 
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Tankgirl"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Witchgirl</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Get a random Witchgirl!<br> 
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Witchgirl"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Source</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Find out the artist, charaters and series the image is based off!<br>
+      You can also tag the bot in on your friends tweets to get the source of that image!
+      <br>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Source"</strong>
+      <br><strong>"@abc Nice image! Source?"</strong>
+      <br><strong>"What is the anime?</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>Airing</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Find out when a anime is airing!<br> 
+      If nothing is found it will not responde to you.
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"Airing One Piece"</strong>
+      <br><strong>"Airing Naruto"</strong>
+      <br/>
+      </td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>!Level</strong>
+      </td>
+      <td class="mdl-data-table__cell--non-numeric">
+      Using commands increases your level, find out what it is!<br> 
+      <td class="mdl-data-table__cell--non-numeric">
+      <strong>"!Level"</strong>
       <br/>
       </td>
     </tr>
