Fix twitter link and page title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: AcePictureBot 
+title: A Weeb Twitter Bot 
 nav_title: Home
 icon: home
 weight: 0
@@ -15,7 +15,7 @@ permalink: /
     This bot was made to compile the 100+ weeb bots out there into 1 complete open source project.<br>
     This bot will also tweet a random "safe-for-work" pircute every 15 minutes.<br>
     <strong>Please note: this bot is still in heavy development.</strong><br>
-    Any other problems or questions, feel free to tweet @Ace3DF<br>
+    Any other problems or questions, feel free to tweet <a href="http://twitter.com/ace3df">@Ace3DF</a><br>
   </div>
 
   <div class="hr"></div>
