[FIX] Local gitignore [ADD] More help for waifuregister

--- a/commands.html
+++ b/commands.html
@@ -7,6 +7,7 @@ viewport_width: 675
 ---
 
 Full list of commands. Please read and look at the examples before using.
+<br>You don't need to include the quotes.
 <br/>
 <br/>
 TODO: automaticaly get this from github code and comments
@@ -36,19 +37,25 @@ TODO: automaticaly get this from github code and comments
       <br><strong>5. </strong>If the name is single you can try adding the series name
       <br>they are from in brackets () after their name (read 4.).
       <br><strong>6. </strong>Seasonal waifus are a bad idea as not much art is out there!
-      <br><strong>7. </strong>If the name is only single (i.e. C.C.) add "$" on the end (read 4.)!
+      <br><strong>7. </strong>If the name is single, the bot will try and help you with a paste!
+      <br><strong>8. </strong>If the name is only single (i.e. C.C.) add "$" on the end (read 4.)!
       <br>
       <br><strong class="blink">DO NOT REGISTER: </strong>a real person, anime name,
-      <br>your twitter handle, tags (1girl, 1boy, etc.), or a pony.
+      <br>your twitter handle, tags (1girl, 1boy, etc.), a pony,
+      <br>or a full name as a single.
       </td>
       <td class="mdl-data-table__cell--non-numeric">
-      <strong>"WaifuRegister Tojo Nozomi"</strong>
-      <br><strong>"WaifuRegister Akame (Akame Ga Kill!)"</strong>
-      <br><strong>"WaifuRegister Kongou (Kantai Collection)"</strong>
-      <br><strong>"WaifuRegister C.C. $"</strong>
-      <br><strong>"WaifuRegister Horo $"</strong>
-      <br><strong>"HusbandoRegister Hyakuya Yuuichirou"</strong>
-      <br><strong>"HusbandoRegister Archer (Fate/Stay Night)"</strong>
+      <strong>"WaifuRegister Tojo Nozomi"<i class="material-icons">check</i></strong>
+      <br><strong>"WaifuRegister Tojo Norzomi (Love Live)"<i class="material-icons">close</i></strong>
+      <br><strong>"WaifuRegister Akame (Akame Ga Kill!)"<i class="material-icons">check</i></strong>
+      <br><strong>"WaifuRegister Kongou (Kantai Collection)"<i class="material-icons">check</i></strong>
+      <br><strong>"WaifuRegister Asuna""<i class="material-icons">check</i></strong>
+      <br>This will return a paste with a list of names to help you get the corrent person.
+      <br><strong>"WaifuRegister Tojo $"<i class="material-icons">close</i></strong>
+      <br><strong>"WaifuRegister C.C. $"<i class="material-icons">check</i></strong>
+      <br><strong>"WaifuRegister Horo $"<i class="material-icons">check</i></strong>
+      <br><strong>"HusbandoRegister Hyakuya Yuuichirou"<i class="material-icons">check</i></strong>
+      <br><strong>"HusbandoRegister Archer (Fate/Stay Night)"<i class="material-icons">check</i></strong>
       </td>
     </tr>
     <tr>
