--- a/commands.html
+++ b/commands.html
@@ -45,13 +45,14 @@ TODO: automaticaly get this from github code and comments
       <br>or a full name as a single.
       </td>
       <td class="mdl-data-table__cell--non-numeric">
-      <strong>"WaifuRegister Tojo Nozomi"<i class="material-icons">check</i></strong>
-      <br><strong>"WaifuRegister Tojo Norzomi (Love Live)"<i class="material-icons">close</i></strong>
+      <strong>"WaifuRegister Tojo Nozomi"<i class="material-icons">close</i></strong>
+      <br><strong>"WaifuRegister Toujou Nozomi"<i class="material-icons">check</i></strong>
+      <br><strong>"WaifuRegister Toujou Nozomi Norzomi (Love Live)"<i class="material-icons">close</i></strong>
       <br><strong>"WaifuRegister Akame (Akame Ga Kill!)"<i class="material-icons">check</i></strong>
       <br><strong>"WaifuRegister Kongou (Kantai Collection)"<i class="material-icons">check</i></strong>
       <br><strong>"WaifuRegister Asuna""<i class="material-icons">check</i></strong>
       <br>This will return a paste with a list of names to help you get the corrent person.
-      <br><strong>"WaifuRegister Tojo $"<i class="material-icons">close</i></strong>
+      <br><strong>"WaifuRegister Toujou $"<i class="material-icons">close</i></strong>
       <br><strong>"WaifuRegister C.C. $"<i class="material-icons">check</i></strong>
       <br><strong>"WaifuRegister Horo $"<i class="material-icons">check</i></strong>
       <br><strong>"HusbandoRegister Hyakuya Yuuichirou"<i class="material-icons">check</i></strong>
