I can't find the thing that's auto @ lol

--- a/commands.html
+++ b/commands.html
@@ -328,7 +328,7 @@ font-size: 18px;
                       <br>
                       <td class="mdl-data-table__cell--non-numeric">
                         <strong>Source</strong>
-                        <br><strong>@friend Nice! @AcePictureBot Source</strong>
+                        <br><strong>[at]friend Nice! [at]AcePictureBot Source</strong>
                         <br><strong>What is the anime?</strong>
                         <br/>
                       </td>
