last update for now

--- a/commands.html
+++ b/commands.html
@@ -19,7 +19,7 @@ font-size: 18px;
     <tr>
       <th class="mdl-data-table__cell--non-numeric">Command</th>
       <th class="mdl-data-table__cell--non-numeric">Description</th>
-      <th class="mdl-data-table__cell--non-numeric">Example(s) @AcePictureBot</th>
+      <th class="mdl-data-table__cell--non-numeric">Example(s) [at]AcePictureBot</th>
     </tr>
   </thead>
   <tbody>
