Finally fix the @ problem

--- a/commands.html
+++ b/commands.html
@@ -19,7 +19,7 @@ font-size: 18px;
     <tr>
       <th class="mdl-data-table__cell--non-numeric">Command</th>
       <th class="mdl-data-table__cell--non-numeric">Description</th>
-      <th class="mdl-data-table__cell--non-numeric">Example(s) [at]AcePictureBot</th>
+      <th class="mdl-data-table__cell--non-numeric">Example(s) @AcePictureBot</th>
     </tr>
   </thead>
   <tbody>
@@ -328,7 +328,7 @@ font-size: 18px;
                       <br>
                       <td class="mdl-data-table__cell--non-numeric">
                         <strong>Source</strong>
-                        <br><strong>[at]friend Nice! [at]AcePictureBot Source</strong>
+                        <br><strong>@friend Nice! @AcePictureBot Source</strong>
                         <br><strong>What is the anime?</strong>
                         <br/>
                       </td>
