--- a/commands.html
+++ b/commands.html
@@ -193,15 +193,15 @@ font-size: 18px;
     </tr>
         <tr>
       <td class="mdl-data-table__cell--non-numeric">
-        <strong>Kohai</strong>
+        <strong>Kouhai</strong>
       </td>
       <td class="mdl-data-table__cell--non-numeric">
-        Get a random Kohai!<br>
+        Get a random Kouhai!<br>
       <strong>Optional:</strong> Add "male" or "female" for just that gender!</td>
       <td class="mdl-data-table__cell--non-numeric">
-        <strong>Kohai</strong>
-        <br><strong>Kohai Male</strong>
-        <br><strong>Kohai Female</strong>
+        <strong>Kouhai</strong>
+        <br><strong>Kouhai Male</strong>
+        <br><strong>Kouhai Female</strong>
         <br/>
       </td>
     </tr>
